New structure with separate projects: `annotation`, `annotation-processor` and `annotation-processor-test`